# aps01-api-rest-postgres_enviar

./: README.md  pyproject.toml
src/config/: database.py
src/models/: provas_model.py  resultados_model.py
src/routes/: provas_routes.py  resultados_routes.py
